# HinaPE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  Dockerfile  HinaPE.cpp  LICENSE.REMOVED.git-id  README.md  README.md.REMOVED.git-id  README_zh.md  TODO-List.md  main.cpp.REMOVED.git-id  math_api.h  vcpkg.json
HinaGeom/: CMakeLists.txt
HinaGeom/cmake/: libigl.cmake
HinaGeom/pmp/: BoundingBox.h  CMakeLists.txt  MatVec.h  SurfaceMesh.cpp  SurfaceMesh.h
HinaGeom/simple_shapes/: sphere.cpp  sphere.h
HinaGeom/triangle_meshes/: indexed_triangle_mesh.cpp  indexed_triangle_mesh.h  vertex_info.cpp  vertex_info.h
HinaGeom/unit_test/: shape_test.cpp
HinaViewer/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  hina_viewer.cpp  hina_viewer.h
HinaViewer/api/: renderable.h
HinaViewer/mesh/: CMakeLists.txt
_common/: CMakeLists.txt  common.h
_common/_unit_test/: CMakeLists.txt  main.cpp  test_math.h  test_parallel.h  test_quaternion.h
_common/animation/: animation.h  physics_animation.h
_common/geom/: bbox.h  collider.cpp  collider.h  field.h  grid.cpp  grid.h  surface3.cpp  surface3.h
_common/math/: array.h  math_ext.h  matrix.h  quaternion.h  ray.h  size.h  transform.h  vector.h
_common/util/: parallel.h  timer.h
_examples/302-grid-smoke/: CMakeLists.txt
_physics/cloth/: CMakeLists.txt  data.h  main.cpp  solver.cpp  solver.h
_physics/fluid/: CMakeLists.txt  solver_grid_fluid.cpp  solver_grid_fluid.h
cloth-engine/: CMakeLists.txt  main.cpp
cloth-engine/factory/: grid_factory.cpp  grid_factory.h
cloth-engine/solver/: cloth_data.h  cloth_render_data.cpp  cloth_render_data.h  cloth_solver.cpp  cloth_solver.h
cloth-engine/util/: math_api.h  parallel_api.h
common/: CMakeLists.txt  constants.h  cpp_utils-inl.h  cpp_utils.h  fbs_helpers.h  fdm_utils.cpp  fdm_utils.h  functors-inl.h  functors.h  level_set_utils-inl.h  level_set_utils.h  logging.cpp  logging.h  macros.h  math_utils-inl.h  math_utils.h  parallel-inl.h  parallel.cpp  parallel.h  pch.h  physics_helpers.h  private_helpers.h  samplers-inl.h  samplers.h  serial-inl.h  serial.h  serialization-inl.h  serialization.cpp  serialization.h  timer.cpp  timer.h  type_helpers.h
common/animation/: animation.cpp  animation.h  physics_animation.cpp  physics_animation.h
common/array/: array.h  array1-inl.h  array1.h  array2-inl.h  array2.h  array3-inl.h  array3.h  array_accessor.h  array_accessor1-inl.h  array_accessor1.h  array_accessor2-inl.h  array_accessor2.h  array_accessor3-inl.h  array_accessor3.h  array_samplers.h  array_samplers1-inl.h  array_samplers1.h  array_samplers2-inl.h  array_samplers2.h  array_samplers3-inl.h  array_samplers3.h  array_utils-inl.h  array_utils.h  cubic_semi_lagrangian3.cpp  cubic_semi_lagrangian3.h  semi_lagrangian3.cpp  semi_lagrangian3.h  size-inl.h  size.h  size2-inl.h  size2.h  size3-inl.h  size3.h
common/field/: constant_scalar_field2.cpp  constant_scalar_field2.h  constant_scalar_field3.cpp  constant_scalar_field3.h  constant_vector_field2.cpp  constant_vector_field2.h  constant_vector_field3.cpp  constant_vector_field3.h  custom_vector_field3.cpp  custom_vector_field3.h  field2.cpp  field2.h  field3.cpp  field3.h  scalar_field2.cpp  scalar_field2.h  scalar_field3.cpp  scalar_field3.h  vector_field2.cpp  vector_field2.h  vector_field3.cpp  vector_field3.h
common/geometry/: bounding_box-inl.h  bounding_box.h  bounding_box2-inl.h  bounding_box2.h  bounding_box3-inl.h  bounding_box3.h  box2.cpp  box2.h  box3.cpp  box3.h  bvh2-inl.h  bvh2.h  bvh3-inl.h  bvh3.h  collider2.cpp  collider2.h  collider3.cpp  collider3.h  custom_implicit_surface2.cpp  custom_implicit_surface2.h  custom_implicit_surface3.cpp  custom_implicit_surface3.h  cylinder3.cpp  cylinder3.h  grid_mesh2.cpp  grid_mesh2.h  implicit_surface2.cpp  implicit_surface2.h  implicit_surface3.cpp  implicit_surface3.h  implicit_surface_set2.cpp  implicit_surface_set2.h  implicit_surface_set3.cpp  implicit_surface_set3.h  implicit_triangle_mesh3.cpp  implicit_triangle_mesh3.h  kdtree-inl.h  kdtree.h  plane2.cpp  plane2.h  (+39 more)
common/grid/: cell_centered_scalar_grid2.cpp  cell_centered_scalar_grid2.h  cell_centered_scalar_grid3.cpp  cell_centered_scalar_grid3.h  cell_centered_vector_grid2.cpp  cell_centered_vector_grid2.h  cell_centered_vector_grid3.cpp  cell_centered_vector_grid3.h  collocated_vector_grid2.cpp  collocated_vector_grid2.h  collocated_vector_grid3.cpp  collocated_vector_grid3.h  face_centered_grid2.cpp  face_centered_grid2.h  face_centered_grid3.cpp  face_centered_grid3.h  grid2.cpp  grid2.h  grid3.cpp  grid3.h  scalar_grid2.cpp  scalar_grid2.h  scalar_grid3.cpp  scalar_grid3.h  vector_grid2.cpp  vector_grid2.h  vector_grid3.cpp  vector_grid3.h  vertex_centered_scalar_grid2.cpp  vertex_centered_scalar_grid2.h  vertex_centered_scalar_grid3.cpp  vertex_centered_scalar_grid3.h  vertex_centered_vector_grid2.cpp  vertex_centered_vector_grid2.h  vertex_centered_vector_grid3.cpp  vertex_centered_vector_grid3.h
common/math/: matrix-inl.h  matrix.h  matrix2x2-inl.h  matrix2x2.h  matrix3x3-inl.h  matrix3x3.h  matrix4x4-inl.h  matrix4x4.h  matrix_csr-inl.h  matrix_csr.h  matrix_expression-inl.h  matrix_expression.h  matrix_mxn-inl.h  matrix_mxn.h  quaternion-inl.h  quaternion.h  vector-inl.h  vector.h  vector2-inl.h  vector2.h  vector3-inl.h  vector3.h  vector4-inl.h  vector4.h  vector_expression-inl.h  vector_expression.h  vector_n-inl.h  vector_n.h
common/query_engine/: intersection_query_engine2.h  intersection_query_engine3.h  nearest_neighbor_query_engine2.h  nearest_neighbor_query_engine3.h
engine/cloth/: CMakeLists.txt  math_api.h
examples/: CMakeLists.txt
examples/000-kasumi-from-scratch/: CMakeLists.txt  main.cpp
examples/000kasumi-from-scratch/: CMakeLists.txt
examples/001-painting2D/: CMakeLists.txt  main.cpp
examples/001painting2D/: CMakeLists.txt
fluid_engine/: CMakeLists.txt  main.cpp
render-engine/: CMakeLists.txt  app.cpp  app.h  main.cpp  math_api.h  physics-system-api.h
render-engine-new/: CMakeLists.txt  math_api.h
tutorials/: CMakeLists.txt
(+2482 files in other folders)
